add_executable(capability_test capability_test.c)
target_link_libraries(capability_test PRIVATE d3d8_to_gles)
add_test(NAME capability_test COMMAND capability_test)

add_executable(caps_flags_test caps_flags_test.c)
target_link_libraries(caps_flags_test PRIVATE d3d8_to_gles)
add_test(NAME caps_flags_test COMMAND caps_flags_test)

add_executable(box_render_test box_render_test.c)
target_link_libraries(box_render_test PRIVATE d3d8_to_gles)
add_test(NAME box_render_test COMMAND box_render_test)

add_executable(sphere_stub_test sphere_stub_test.c)
target_link_libraries(sphere_stub_test PRIVATE d3d8_to_gles)
add_test(NAME sphere_stub_test COMMAND sphere_stub_test)

add_executable(cylinder_test cylinder_test.c)
target_link_libraries(cylinder_test PRIVATE d3d8_to_gles)
add_test(NAME cylinder_test COMMAND cylinder_test)

add_executable(texture_stage_test texture_stage_test.c)
target_link_libraries(texture_stage_test PRIVATE d3d8_to_gles)
add_test(NAME texture_stage_test COMMAND texture_stage_test)

add_executable(color_write_mask_test color_write_mask_test.c)
target_link_libraries(color_write_mask_test PRIVATE d3d8_to_gles)
add_test(NAME color_write_mask_test COMMAND color_write_mask_test)

add_executable(stencil_enable_test stencil_enable_test.c)
target_link_libraries(stencil_enable_test PRIVATE d3d8_to_gles)
add_test(NAME stencil_enable_test COMMAND stencil_enable_test)

add_executable(xyzrhw_test xyzrhw_test.c)
target_link_libraries(xyzrhw_test PRIVATE d3d8_to_gles)
add_test(NAME xyzrhw_test COMMAND xyzrhw_test)

add_executable(adapter_info_test adapter_info_test.c)
target_link_libraries(adapter_info_test PRIVATE d3d8_to_gles)
add_test(NAME adapter_info_test COMMAND adapter_info_test)

add_executable(get_adapter_display_mode_test get_adapter_display_mode_test.c)
target_link_libraries(get_adapter_display_mode_test PRIVATE d3d8_to_gles)
add_test(NAME get_adapter_display_mode_test COMMAND get_adapter_display_mode_test)

add_executable(tex2_coord_test tex2_coord_test.c)
target_link_libraries(tex2_coord_test PRIVATE d3d8_to_gles)
add_test(NAME tex2_coord_test COMMAND tex2_coord_test)

add_executable(texcoord_index_test texcoord_index_test.c)
target_link_libraries(texcoord_index_test PRIVATE d3d8_to_gles)
add_test(NAME texcoord_index_test COMMAND texcoord_index_test)

add_executable(color_mask_draw_test color_mask_draw_test.c)
target_link_libraries(color_mask_draw_test PRIVATE d3d8_to_gles)
add_test(NAME color_mask_draw_test COMMAND color_mask_draw_test)

add_executable(stencil_mask_draw_test stencil_mask_draw_test.c)
target_link_libraries(stencil_mask_draw_test PRIVATE d3d8_to_gles)
add_test(NAME stencil_mask_draw_test COMMAND stencil_mask_draw_test)

add_executable(triangle_strip_test triangle_strip_test.c)
target_link_libraries(triangle_strip_test PRIVATE d3d8_to_gles)
add_test(NAME triangle_strip_test COMMAND triangle_strip_test)

add_executable(point_list_test point_list_test.c)
target_link_libraries(point_list_test PRIVATE d3d8_to_gles)
add_test(NAME point_list_test COMMAND point_list_test)

add_executable(buffer_lock_flags_test buffer_lock_flags_test.c)
target_link_libraries(buffer_lock_flags_test PRIVATE d3d8_to_gles)
add_test(NAME buffer_lock_flags_test COMMAND buffer_lock_flags_test)
add_executable(two_stage_render_test two_stage_render_test.c)
target_link_libraries(two_stage_render_test PRIVATE d3d8_to_gles)
add_test(NAME two_stage_render_test COMMAND two_stage_render_test)
add_executable(compute_bounding_sphere_test compute_bounding_sphere_test.c)
target_link_libraries(compute_bounding_sphere_test PRIVATE d3d8_to_gles)
add_test(NAME compute_bounding_sphere_test COMMAND compute_bounding_sphere_test)
add_executable(compute_bounding_box_test compute_bounding_box_test.c)
target_link_libraries(compute_bounding_box_test PRIVATE d3d8_to_gles)
add_test(NAME compute_bounding_box_test COMMAND compute_bounding_box_test)
add_executable(compute_normals_test compute_normals_test.c)
target_link_libraries(compute_normals_test PRIVATE d3d8_to_gles)
add_test(NAME compute_normals_test COMMAND compute_normals_test)

add_executable(create_texture_test create_texture_test.c)
target_link_libraries(create_texture_test PRIVATE d3d8_to_gles)
add_test(NAME create_texture_test COMMAND create_texture_test)

add_executable(filter_texture_test filter_texture_test.c)
target_link_libraries(filter_texture_test PRIVATE d3d8_to_gles)
add_test(NAME filter_texture_test COMMAND filter_texture_test)
add_executable(vec3_transform_test vec3_transform_test.c)
target_link_libraries(vec3_transform_test PRIVATE d3d8_to_gles)
add_test(NAME vec3_transform_test COMMAND vec3_transform_test)
add_executable(matrix_lookatrh_test matrix_lookatrh_test.c)
target_link_libraries(matrix_lookatrh_test PRIVATE d3d8_to_gles)
add_test(NAME matrix_lookatrh_test COMMAND matrix_lookatrh_test)
add_executable(perspective_fovrh_test perspective_fovrh_test.c)
target_link_libraries(perspective_fovrh_test PRIVATE d3d8_to_gles)
add_test(NAME perspective_fovrh_test COMMAND perspective_fovrh_test)
add_executable(ortho_test ortho_test.c)
target_link_libraries(ortho_test PRIVATE d3d8_to_gles)
add_test(NAME ortho_test COMMAND ortho_test)
add_executable(rotation_quaternion_test rotation_quaternion_test.c)
target_link_libraries(rotation_quaternion_test PRIVATE d3d8_to_gles)
add_test(NAME rotation_quaternion_test COMMAND rotation_quaternion_test)
add_executable(shader_constant_test shader_constant_test.c)
target_link_libraries(shader_constant_test PRIVATE d3d8_to_gles)
add_test(NAME shader_constant_test COMMAND shader_constant_test)
